fix grid spacing

--- a/public/css/templates/4col.css
+++ b/public/css/templates/4col.css
@@ -1,11 +1,13 @@
 #fgp-gallery li {
     width: 23%;
+    margin: 0 12px 12px 0;
 }
 
 @media (max-width: 768px) {
     #fgp-gallery li {
         width: 48%;
-        margin-right: 8px;
+        margin-right: 10px;
+        margin-bottom: 10px;
     }
 }
 
@@ -13,7 +15,7 @@
 
     #fgp-gallery li {
         width: 100%;
-        margin: 0;
+        margin: 0 0 20px;
     }
 
     #fgp-filters {
